--- a/scouting.html
+++ b/scouting.html
@@ -12,7 +12,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@500&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     </head>
     <body>
@@ -61,23 +60,20 @@
                 </div>
               </nav>
         </header>
-            <main id="paginaScouting">
-                
-                <section id="scouting">
-                    <h1 class="titulo">Scouting New Faces</h1>
-                    <article>
-                        <p>Buscamos nuevos modelos para incorporar a nuestro staff. Si querés formar parte de nuestra comunidad, seguí estos pasos:
-                        </p>
-                        <ol>
-                            <li>Brindarnos tu nombre de usuario en Instagram. Recordá tener tu perfil público.</li>
-                            <li>Enviarnos tus datos personales y fotos polaroid o fotos test a nuestro email:
-                            alteragencia.arg@gmail.com</li>
-                        </ol>
-                        <p class="negrita">¡Aclaración Importante!</p>
-                        <p class="negrita">No importan tus medidas ni si contás o no con experiencia previa como modelo.</p>
-                    </article>
-                    <img class="animate__animated animate__backInLeft" id="convocatoria" src="img/Photos/scouting_flyer_convocatoria.jpg" alt="Proximamente convocatoria flyer">
-                </section>
+            <main>
+              <h1 class="titulo">Scouting New Faces</h1>
+
+                <article>
+                    <p>Buscamos nuevos modelos para incorporar a nuestro staff. Si querés formar parte de nuestra comunidad, seguestos pasos:
+                    </p>
+                    <ol>
+                      <li>Brindarnos tu nombre de usuario en Instagram. Recordá tener tu perfil público.</li>
+                      <li>Enviarnos tus datos personales y fotos polaroid o fotos test a nuestro e-mail:
+                      <a href="mailto:alteragencia.arg@gmail.com" target="_blank">alteragencia.arg@gmail.com</a></li>
+                    </ol>
+                    <p class="negrita">¡Aclaración Importante!</p>
+                    <p class="negrita">No importan tus medidas ni si contás o no con experiencia previa como modelo.</p>
+                </article>
 
                 <section id="redesSocialesSeguinos">
                     <h3 id="textDesk">¡Seguinos!</h3>
