--- a/staff.html
+++ b/staff.html
@@ -65,7 +65,7 @@
 
                 <div class="container">
                   <div class="card" style="width: 18rem;">
-                    <img src="img/Staff/elias.jpg" class="card-img-top" alt="...">
+                    <img src="img/Staff/elias.jpg" class="card-img-top" alt="foto_modelo">
                     <div class="card-body">
                       <p class="negrita"> Elías Zalazar</p>
                       <p class="negrita"> Director </p>
@@ -76,7 +76,7 @@
                   </div>
 
                   <div class="card" style="width: 18rem;">
-                    <img src="img/Staff/rachel.jpg" class="card-img-top" alt="...">
+                    <img src="img/Staff/rachel.jpg" class="card-img-top" alt="foto_modelo">
                     <div class="card-body">
                       <p class="negrita"> Rachel Zalazar </p>
                       <p class="negrita"> Directora </p>
@@ -87,7 +87,7 @@
                   </div>
 
                   <div class="card" style="width: 18rem;">
-                    <img src="img/Staff/frangi.jpg" class="card-img-top" alt="...">
+                    <img src="img/Staff/frangi.jpg" class="card-img-top" alt="foto_modelo">
                     <div class="card-body">
                       <p class="negrita"> Agustín Frangi </p>
                       <p class="negrita"> Modelo representante de CABA </p>
@@ -97,7 +97,7 @@
                   </div>
 
                   <div class="card" style="width: 18rem;">
-                    <img src="img/Staff/gabo.jpg" class="card-img-top" alt="...">
+                    <img src="img/Staff/gabo.jpg" class="card-img-top" alt="foto_modelo">
                     <div class="card-body">
                       <p class="negrita"> Gabo Vinitsky </p>
                       <p class="negrita"> Modelo representante de Pilar, BA </p>
@@ -107,7 +107,7 @@
                   </div>
 
                   <div class="card" style="width: 18rem;">
-                    <img src="img/Staff/sofiB.jpg" class="card-img-top" alt="...">
+                    <img src="img/Staff/sofiB.jpg" class="card-img-top" alt="foto_modelo">
                     <div class="card-body">
                       <p class="negrita"> Sofía Basile </p>
                       <p class="negrita"> Modelo </p>
@@ -117,7 +117,7 @@
                   </div>
 
                   <div class="card" style="width: 18rem;">
-                    <img src="img/Staff/jose.jpg" class="card-img-top" alt="...">
+                    <img src="img/Staff/jose.jpg" class="card-img-top" alt="foto_modelo">
                     <div class="card-body">
                       <p class="negrita"> José Yakisich </p>
                       <p class="negrita"> Modelo representante de Asunción,Paraguay</p>
@@ -127,7 +127,7 @@
                   </div>
 
                   <div class="card" style="width: 18rem;">
-                    <img src="img/Staff/joel.jpg" class="card-img-top" alt="...">
+                    <img src="img/Staff/joel.jpg" class="card-img-top" alt="foto_modelo">
                     <div class="card-body">
                       <p class="negrita"> Joel Silveira Martinz</p>
                       <p class="negrita"> Modelo </p>
@@ -137,7 +137,7 @@
                   </div>
 
                   <div class="card" style="width: 18rem;">
-                    <img src="img/Staff/annasilves.jpg" class="card-img-top" alt="...">
+                    <img src="img/Staff/annasilves.jpg" class="card-img-top" alt="foto_modelo">
                     <div class="card-body">
                       <p class="negrita"> Anna Silvestri</p>
                       <p class="negrita"> Modelo </p>
@@ -147,7 +147,7 @@
                   </div>
 
                   <div class="card" style="width: 18rem;">
-                    <img src="img/Carrusel/1-25.jpg" class="card-img-top" alt="...">
+                    <img src="img/Carrusel/1-25.jpg" class="card-img-top" alt="foto_modelo">
                     <div class="card-body">
                       <p class="negrita"> Pedro Luján</p>
                       <p class="negrita"> Modelo </p>
@@ -157,7 +157,7 @@
                   </div>
 
                   <div class="card" style="width: 18rem;">
-                    <img src="img/Staff/delfi.jpg" class="card-img-top" alt="...">
+                    <img src="img/Staff/delfi.jpg" class="card-img-top" alt="foto_modelo">
                     <div class="card-body">
                       <p class="negrita"> Delfina Maldonado</p>
                       <p class="negrita"> Modelo </p>
@@ -167,7 +167,7 @@
                   </div>
 
                   <div class="card" style="width: 18rem;">
-                    <img src="img/Staff/agus.jfif" class="card-img-top" alt="...">
+                    <img src="img/Staff/agus.jfif" class="card-img-top" alt="foto_modelo">
                     <div class="card-body">
                       <p class="negrita"> Agustina Benitez</p>
                       <p class="negrita"> Modelo </p>
@@ -177,7 +177,7 @@
                   </div>
 
                   <div class="card" style="width: 18rem;">
-                    <img src="img/Staff/joacolopez.jfif" class="card-img-top" alt="...">
+                    <img src="img/Staff/joacolopez.jfif" class="card-img-top" alt="foto_modelo">
                     <div class="card-body">
                       <p class="negrita"> Joaquín López Tersetti</p>
                       <p class="negrita"> Modelo </p>
@@ -187,7 +187,7 @@
                   </div>
 
                   <div class="card" style="width: 18rem;">
-                    <img src="img/Staff/romanoguera.jfif" class="card-img-top" alt="...">
+                    <img src="img/Staff/romanoguera.jfif" class="card-img-top" alt="foto_modelo">
                     <div class="card-body">
                       <p class="negrita"> Romina Noguera </p>
                       <p class="negrita"> Modelo </p>
@@ -197,7 +197,7 @@
                   </div>
 
                   <div class="card" style="width: 18rem;">
-                    <img src="img/Staff/einyel.jpg" class="card-img-top" alt="...">
+                    <img src="img/Staff/einyel.jpg" class="card-img-top" alt="foto_modelo">
                     <div class="card-body">
                       <p class="negrita"> Einyel Zacarías </p>
                       <p class="negrita"> Modelo </p>
